--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -20,11 +20,12 @@
     overflow-x: hidden;
     /* overflow-y: scroll; */
   }
-  .width-1200{
+  .width-full{
     width: 1200px;
     padding-right:30px;
     padding-left: 30px;
   }
+ 
  .timeline {
   display: flex;
   overflow-x: auto;
@@ -58,9 +59,6 @@
   margin-top: 20px;
 }
 
-/* .timelineContent h3 {
-  margin: 0 0 10px;
-} */
 
 .timelineContent p {
   margin: 0;
@@ -101,5 +99,16 @@
 @media (max-width: 600px) {
   .timelineContent {
     width: 150px;
+  }
+  .width-full{
+    width: 100vw;
+    padding-right:10px;
+    padding-left: 10px;
+  }
+ 
+}
+@media (max-width: 1100px) {
+    .my_portfolio {
+    height: fit-content;
   }
 }
