added aboutme and projects

--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -89,6 +89,13 @@
   align-items: center;
   gap: 15px;
 }
+.image-height{
+  height: 256px;
+}
+.pin-image-height{
+  height: 150px;
+}
+
 .social-buttons a {
   color: white;
   transition: color 0.3s;
